# curate-x-posts

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
curate_x_posts/: __init__.py  __main__.py
src/: __main__.py
tests/: example_x_login.json
