[project]
name = "scrape-x"
version = "0.0.1"
authors = [
  { name="TCW", email="1470pancake@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tcw1470/scrape-x"
Issues = "https://github.com/tcw1470/scrape-x/issues"
